# C-fast-formatter

./: CMakeCache.txt.prev  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui
Cfast-application-beta_autogen/: deps
Cfast-application-beta_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
Cfast-application-beta_autogen/include/: ui_mainwindow.h
